fix alignment

--- a/roll-that-status/src/Status.css
+++ b/roll-that-status/src/Status.css
@@ -17,7 +17,7 @@
   background-color: transparent;
   position: relative;
   bottom: 20vh;
-  left: 180vh;
+  left: 170vh;
 }
 
 #dice-image {
